# lambdapi-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/lambdapi_mcp/: __init__.py  __main__.py  lsp.py  server.py  tools.py
tests/: conftest.py  test_axioms_rules.py  test_axioms_transitive.py  test_check.py  test_crash_recovery.py  test_goals.py  test_hover_and_def.py  test_symbols.py  test_symbols_filter.py  test_try.py  test_try_semantics.py  test_validation.py
