[project]
name = "lambdapi-mcp"
version = "0.1.0"
description = "MCP server exposing Lambdapi proof-assistant capabilities to AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ciarán Dunne", email = "cciaranddunne@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lambdapi-mcp = "lambdapi_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ciaran-matthew-dunne/lambdapi-mcp"
Issues = "https://github.com/ciaran-matthew-dunne/lambdapi-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambdapi_mcp"]
